个人信息功能

--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
                         个人中心
                     </a>
                     <dl class="layui-nav-child">
-                        <dd><a href="">基本资料</a></dd>
-                        <dd><a href="">更换头像</a></dd>
-                        <dd><a href="">更换密码</a></dd>
+                        <dd><a href="/user/user_info.html" target="if">基本资料</a></dd>
+                        <dd><a href="/user/user_avatar.html" target="if">更换头像</a></dd>
+                        <dd><a href="/user/user_pwd.html" target="if">重置密码</a></dd>
                     </dl>
                 </li>
-                <li class="layui-nav-item"><a href="javascript:;" id="desc"><span class="iconfont icon-tuichu"></span>溜了</a></li>
+                <li class="layui-nav-item"><a href="javascript:;" id="desc"><span
+                            class="iconfont icon-tuichu"></span>溜了</a></li>
             </ul>
         </div>
 
@@ -56,9 +57,12 @@
                     <li class="layui-nav-item">
                         <a href="javascript:;"><span class="iconfont icon-user"></span>个人中心</a>
                         <dl class="layui-nav-child">
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>基本资料</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>更换头像</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>更换密码</a></dd>
+                            <dd><a href="/user/user_info.html" target="if"><i
+                                        class="layui-icon layui-icon-app"></i>基本资料</a></dd>
+                            <dd><a href="/user/user_avatar.html" target="if"><i
+                                        class="layui-icon layui-icon-app"></i>更换头像</a></dd>
+                            <dd><a href="/user/user_pwd.html" target="if"><i
+                                        class="layui-icon layui-icon-app"></i>更换密码</a></dd>
                         </dl>
                     </li>
 
